--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fluttertoast: ^8.2.10
   sqflite: ^2.4.1
   path_provider: ^2.1.5
+  http: ^1.2.2
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
