--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.5
   http: ^1.2.2
   connectivity_plus: ^5.0.1
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
