--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.2.2
   connectivity_plus: ^5.0.1
   shared_preferences: ^2.3.5
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
